frontend/test/should_fail/deque_006.grg
using deque_model_002;

rule assignDequeToDeque {
	a:A -e:E-> a;

	modify {
		eval {
			a.niceDeque = e.spiceDeque;
		}
	}
}
